[package]
name = "pluralizer"
description = "Rust package to pluralize or singularize any word based on a count inspired on pluralize NPM package"
repository = "https://github.com/KennethGomez/pluralizer"
license-file = "LICENSE"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"