[package]
name = "pluralizer"
version = "0.3.1"
authors = ["Kenneth Gómez <kennethgomezfdz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

description = "Rust package to pluralize or singularize any word based on a count inspired on pluralize NPM package"
readme = "README.md"
documentation = "https://docs.rs/pluralizer"

repository = "https://github.com/KennethGomez/pluralizer"
keywords = ["plurals", "singular", "pluralize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"

[dev-dependencies]
ctor = "0.1.21"