[package]
name = "pluralizer"
version = "0.5.0"
authors = ["Kenneth Gómez <kennethgomezfdz@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2021"

description = "Rust package to pluralize or singularize any word based on a count inspired on pluralize NPM package"
readme = "README.md"
documentation = "https://docs.rs/pluralizer"

repository = "https://github.com/KennethGomez/pluralizer"
keywords = ["plurals", "singular", "pluralize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.1"
once_cell = "1.20.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "perf_bench"
harness = false